[package]
name = "gce-wget"
version = "0.1.0"
authors = ["Axolotl"]
edition = "2021"
description = "CLI tool using wget to get CAIE Past Papers; written in Rust"
license = "MIT"
readme="README.md"
repository = "https://github.com/famedaxolotl/gce-wget"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
