[package]
name = "gce-wget"
version = "1.0.5"
authors = ["Axolotl rishavghosh2007@gmail.com"]
edition = "2021"
description = "A CLI tool which uses wget to bulk download CAIE Past Papers; written in Rust"
license = "MIT"
readme="README.md"
repository = "https://github.com/famedaxolotl/gce-wget"
keywords = ["wget", "cli", "caie", "igcse", "past-papers"]

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
reqwest = { version = "0.12.5", features = ["blocking"] }

